--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -303,89 +303,43 @@ jobs:
           fi
 
       - name: Create package structure
-        shell: cmd
+        shell: bash
         run: |
-          C:/git-sdk-64/msys2_shell.cmd -defterm -here -no-start -mingw64 -c "
           set -euo pipefail
-          echo 'Creating mingw-w64 package structure...'
+          echo "Creating mingw-w64 package structure..."
           cd zig-source/build
           
           # Create package directory structure
-          mkdir -p \"pkg\$MINGW_PREFIX\"/{bin,lib,share/licenses/zig}
+          mkdir -p "pkg$MINGW_PREFIX"/{bin,lib,share/licenses/zig}
           
           # Install final compiler binary
-          install -Dm755 stage3/bin/zig.exe \"pkg\$MINGW_PREFIX/bin/zig.exe\"
+          install -Dm755 stage3/bin/zig.exe "pkg$MINGW_PREFIX/bin/zig.exe"
           
           # Install standard library (critical for Zig to function)
-          cp -r ../lib \"pkg\$MINGW_PREFIX/lib/zig\"
+          cp -r ../lib "pkg$MINGW_PREFIX/lib/zig"
           
           # Install license
-          install -Dm644 ../LICENSE \"pkg\$MINGW_PREFIX/share/licenses/zig/LICENSE\"
+          install -Dm644 ../LICENSE "pkg$MINGW_PREFIX/share/licenses/zig/LICENSE"
           
           # Create package metadata for mingw-w64
           mkdir -p pkg/.MTREE
           cat > pkg/.MTREE/package << EOF
           #mtree
-          ./usr time=\$(date +%s)
-          ./usr/bin time=\$(date +%s)
-          ./usr/bin/zig.exe time=\$(date +%s) mode=755
-          ./usr/lib time=\$(date +%s)
-          ./usr/lib/zig time=\$(date +%s)
-          ./usr/share time=\$(date +%s)
-          ./usr/share/licenses time=\$(date +%s)
-          ./usr/share/licenses/zig time=\$(date +%s)
-          ./usr/share/licenses/zig/LICENSE time=\$(date +%s) mode=644
+          ./usr time=$(date +%s)
+          ./usr/bin time=$(date +%s)
+          ./usr/bin/zig.exe time=$(date +%s) mode=755
+          ./usr/lib time=$(date +%s)
+          ./usr/lib/zig time=$(date +%s)
+          ./usr/share time=$(date +%s)
+          ./usr/share/licenses time=$(date +%s)
+          ./usr/share/licenses/zig time=$(date +%s)
+          ./usr/share/licenses/zig/LICENSE time=$(date +%s) mode=644
           EOF
-          "
 
       - name: Create package archive
-        shell: cmd
+        shell: bash
         run: |
-          C:/git-sdk-64/msys2_shell.cmd -defterm -here -no-start -mingw64 -c "
           set -euo pipefail
-          echo 'Creating mingw-w64 package archive...'
-          cd zig-source/build/pkg
-          
-          # Create package using mingw-w64 naming convention
-          tar -cf - .MTREE * | zstd -z -19 - > \"../../mingw-w64-x86_64-zig-\$ZIG_VERSION-1-any.pkg.tar.zst\"
-          cd ../..
-          
-          # Verify package was created
-          if [ -f \"mingw-w64-x86_64-zig-\$ZIG_VERSION-1-any.pkg.tar.zst\" ]; then
-            echo '✓ Package created successfully'
-            ls -la \"mingw-w64-x86_64-zig-\$ZIG_VERSION-1-any.pkg.tar.zst\"
-          else
-            echo '✗ Package creation failed'
-            exit 1
-          fi
-          "
-
-      - name: Test package installation
-        shell: cmd
-        run: |
-          C:/git-sdk-64/msys2_shell.cmd -defterm -here -no-start -mingw64 -c "
-          set -euo pipefail
-          echo 'Testing package installation...'
-          cd zig-source
-          
-          # Install the package
-          pacman -U --noconfirm \"mingw-w64-x86_64-zig-\$ZIG_VERSION-1-any.pkg.tar.zst\"
-          
-          # Test installed compiler
-          zig version
-          zig targets
-          
-          # Test compilation with installed version
-          echo 'const std = @import(\"std\");
-          pub fn main() void {
-              std.debug.print(\"Package test successful!\n\", .{});
-          }' > package_test.zig
-          
-          zig build-exe package_test.zig
-          ./package_test.exe
-          
-          echo '✓ Package installation and testing completed successfully'
-          "ail
           echo "Creating mingw-w64 package archive..."
           cd zig-source/build/pkg
           
@@ -457,34 +411,32 @@ jobs:
 
       - name: Create build report
         if: always()
-        shell: cmd
+        shell: bash
         run: |
-          C:/git-sdk-64/msys2_shell.cmd -defterm -here -no-start -mingw64 -c "
-          echo '# Zig Mingw-w64 Build Report' > build-report.md
-          echo '' >> build-report.md
-          if [ '\${{ job.status }}' = 'success' ]; then
-            echo '**Status:** ✅ Success' >> build-report.md
+          echo "# Zig Mingw-w64 Build Report" > build-report.md
+          echo "" >> build-report.md
+          if [ "${{ job.status }}" = "success" ]; then
+            echo "**Status:** ✅ Success" >> build-report.md
           else
-            echo '**Status:** ❌ Failed' >> build-report.md
+            echo "**Status:** ❌ Failed" >> build-report.md
           fi
-          echo '**Version:** \$ZIG_VERSION' >> build-report.md
-          echo '**Build Jobs:** \$BUILD_JOBS' >> build-report.md
-          echo '**Build Time:** '\$(date) >> build-report.md
-          echo '**Workflow Run:** \${{ github.run_id }}' >> build-report.md
-          echo '' >> build-report.md
+          echo "**Version:** $ZIG_VERSION" >> build-report.md
+          echo "**Build Jobs:** $BUILD_JOBS" >> build-report.md
+          echo "**Build Time:** $(date)" >> build-report.md
+          echo "**Workflow Run:** ${{ github.run_id }}" >> build-report.md
+          echo "" >> build-report.md
           
-          if [ '\${{ job.status }}' = 'success' ]; then
-            echo '**Package:** mingw-w64-x86_64-zig-'\$ZIG_VERSION'-1-any.pkg.tar.zst' >> build-report.md
-            if [ -f 'zig-source/mingw-w64-x86_64-zig-'\$ZIG_VERSION'-1-any.pkg.tar.zst' ]; then
-              echo '**Size:** '\$(du -h zig-source/mingw-w64-x86_64-zig-\$ZIG_VERSION-1-any.pkg.tar.zst | cut -f1) >> build-report.md
+          if [ "${{ job.status }}" = "success" ]; then
+            echo "**Package:** mingw-w64-x86_64-zig-$ZIG_VERSION-1-any.pkg.tar.zst" >> build-report.md
+            if [ -f "zig-source/mingw-w64-x86_64-zig-$ZIG_VERSION-1-any.pkg.tar.zst" ]; then
+              echo "**Size:** $(du -h zig-source/mingw-w64-x86_64-zig-$ZIG_VERSION-1-any.pkg.tar.zst | cut -f1)" >> build-report.md
             else
-              echo '**Size:** Unknown' >> build-report.md
+              echo "**Size:** Unknown" >> build-report.md
             fi
-            echo '**Compiler Path:** zig-source/build/stage3/bin/zig.exe' >> build-report.md
+            echo "**Compiler Path:** zig-source/build/stage3/bin/zig.exe" >> build-report.md
           else
-            echo '**Error:** Build failed - check logs for details' >> build-report.md
+            echo "**Error:** Build failed - check logs for details" >> build-report.md
           fi
-          "
 
       - name: Upload build report
         if: always()
